[package]
name = "stringer"
version = "0.1.3"
authors = ["Regis <boudinot.regis@yahoo.com>"]
description = "An easy way to turn Unsafe C strings into Rust String types and back."
homepage = "https://github.com/selfup/stringer"
repository = "https://github.com/selfup/stringer"
readme = "README.md"
documentation = "https://github.com/selfup/stringer/blob/master/README.md"
keywords = ["ffi", "cstr", "string", "cstring", "ffistrings"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
